tests/fixtures/Command/FormatPhp/invalid-syntax/valid.php
<?php
print "Hello {$arr['fruit']}";
